--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +15,11 @@
     "@babel/core": "^7.21.4",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
+    "gh": "^2.8.9",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   }
 }
